--- a/css/nav.css
+++ b/css/nav.css
@@ -18,7 +18,7 @@
     font-weight: 800;
     padding: 1em;
     text-decoration: none;
-    color: #454545;
+    color: white;
 }
 
 /*************************
