--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ header {
     margin: 0 0 30px 0;
     padding: 5px 0 0 0;
     width: 100%;
-    color: #454545;
+    color: white;
 }
 
 h4 {
@@ -45,9 +45,9 @@ h4 {
 }
 
 #contact {
-display:block;
-float:none;
-clear:both;
+display: block;
+float: none;
+clear: both;
 padding: 1em;
 border-bottom: 1px solid #E6E6E6;
 }
@@ -71,10 +71,16 @@ img {
         FOOTER
  ************************/
 
+/***Sticky Footer***/
 .site-footer {
-    color: #454545;
+    position: fixed;
+    bottom: 0;
+    margin: 0 auto;
     background-color: white;
+    color: #454545;
     width: 100%;
+    height: 60px;
+    z-index: 1000;  
 }
 
 .site-footer ul {
@@ -100,17 +106,3 @@ img {
 @media only screen and (min-width: 768px) {
     
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
