--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,8 @@ img {
  ************************/
 
 /***Sticky Footer***/
-.site-footer {
+.site-footer,
+.site-footer-2 {
     position: fixed;
     bottom: 0;
     margin: 0 auto;
@@ -100,47 +101,36 @@ img {
     color: #454545;
 }
 
+.site-footer-2 ul {
+    display: flex;
+    list-style: none;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
+    padding-left: 1em;
+    padding-right: 1em;
+}
+
+.site-footer-2 a {
+    text-decoration: none;
+    color: #454545;
+}
+
 
 /*************************
       MEDIA QUERIES
  ************************/
  
- @media only screen and (max-width: 768px) {
+ @media screen and (max-width: 768px) {
      .site-footer-2 {
          display: none;
      }
  }
 
-@media only screen and (min-width: 768px) {
+@media screen and (min-width: 768px) {
     
     .site-footer {
-         display: none;
-     }
-    
-    .site-footer-2 {
-    position: fixed;
-    bottom: 0;
-    margin: 0 auto;
-    background-color: white;
-    color: #454545;
-    width: 100%;
-    height: 60px;
-    z-index: 1000; 
-}
-
-.site-footer-2 ul {
-    display: flex;
-    list-style: none;
-    text-decoration: none;
-    justify-content: flex-end;
-    align-items: center;
-    margin: 0;
-}
-
-.site-footer-2 p {
-    display: flex;
-    justify-content: flex-start;
-}
-
+        display: none;
+    }
 
 }
