--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,28 @@ h4 {
     padding-bottom: 1em;
 }
 
+/*************************
+         NAVIGATION
+ ************************/
+
+.navbar ul {
+ list-style: none;
+ margin: 0 10px;
+ padding: 0;
+}
+
+.navbar ul li {
+   display: block;
+   margin: 5px auto;
+   padding: 10px 0;
+}
+
+.navbar a {
+    font-weight: 800;
+    padding: 1em;
+    text-decoration: none;
+    color: white;
+}
 
 /*************************
          PROFILE
@@ -30,7 +52,6 @@ h4 {
 .profile-photo {
     display: inline-flex;
     justify-content: center;
-    margin: 0 auto;
 }
 
 #profile {
@@ -53,10 +74,6 @@ h4 {
     padding: 1em;
 }
 
- #title {
-    font-size: 1.25em;
-    line-height: .75em;
- }
 
 /*************************
     PORTFOLIO PICTURES
@@ -116,21 +133,5 @@ img {
     color: #454545;
 }
 
-
-/*************************
-      MEDIA QUERIES
- ************************/
  
- @media screen and (max-width: 768px) {
-     .site-footer-2 {
-         display: none;
-     }
- }
 
-@media screen and (min-width: 768px) {
-    
-    .site-footer {
-        display: none;
-    }
-
-}
